--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -3,7 +3,7 @@ name: feature
 on:
   push:
     branches:
-      - #TODO run all feature/ branches
+      - 'feature/**'
       - 'hotfix'
   pull_request:
     types: [ opened, reopened ]
@@ -21,7 +21,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
-          python-version: "3.8.2"
+          python-version: "3.8.5"
 
       - name: Install pipenv
         run: make install
@@ -37,13 +37,13 @@ jobs:
 
       - name: Install dependencies
         if: steps.cache-pipenv.outputs.cache-hit != 'true'
-        run: exit 1; # RUN INIT
+        run: make init # RUN INIT
 
       - name: Run analyzer
-        run: exit 1; # RUN analyzer
+        run: make analyze # RUN analyzer
 
       - name: Run test suite
-        run: exit 1; # RUN TESTS & CODECOVERAGE
+        run: make  tests # RUN TESTS & CODECOVERAGE
 
       - name: Upload test results (junit)
         uses: actions/upload-artifact@v2
